# fin2605_analysis_agent

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
documentations/: 0_documentation_requirements.md  20260510_agentic_framework_analysis.md  20260510_langchain_setup_guide.md
examples/: stock_analysis_demo.py
feature_requirements/: 20260510_project_initial_setup.md
llm_api_module/: .env.example  README.md  llm_config.yaml  pyproject.toml
llm_api_module/src/: __init__.py  config.py  llm_client.py
llm_api_module/src/providers/: __init__.py  aliyun.py  base.py  checker.py  kimi.py  minimax.py  openai_legacy.py  sync.py
llm_api_module/tests/: test_llm_call.py
src/fin2605_analysis_agent/: __init__.py
src/fin2605_analysis_agent/agents/: __init__.py  stock_agent.py
src/fin2605_analysis_agent/skills/: __init__.py  market_data.py  news_research.py  stock_report.py
src/fin2605_analysis_agent/tools/: __init__.py  database.py  web_search.py
tests/: __init__.py  test_stock_analysis.py
