[project]
name = "llm-api-module"
version = "0.1.0"
description = "Portable multi-provider LLM API module with OpenAI-compatible, Kimi, Aliyun, and MiniMax support"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.12.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
